manifests/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: development
  name: busybox1
  labels:
    app: busybox1
spec:
  containers:
    - image: busybox
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
      resources:
        requests:
          cpu: "5m"
          memory: "5Mi"
        limits:
          cpu: "20m"
          memory: "20Mi"

  restartPolicy: Always
