manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: log-output
spec:
  replicas: 3
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: djblackett/log-output:0bfd6c25af25fd17e484f6394b12abf599212e32
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: log-config
              mountPath: "/etc/config"
              readOnly: true
          resources:
            requests:
              cpu: "5m"
              memory: "5Mi"
            limits:
              cpu: "20m"
              memory: "20Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8080
      volumes:
        - name: log-config
          configMap:
            name: log-output-config
            items:
              - key: informational.txt
                path: informational.txt

---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
