manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: djblackett/pingpong:0bfd6c25af25fd17e484f6394b12abf599212e32
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "5m"
              memory: "5Mi"
            limits:
              cpu: "20m"
              memory: "20Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 8000

---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: ping-pong-svc
spec:
  type: NodePort
  selector:
    app: ping-pong # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8000
