manifests/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: development
  name: redis-stset
spec:
  serviceName: redis-svc
  replicas: 1
  selector:
    matchLabels:
      app: redisapp
  template:
    metadata:
      labels:
        app: redisapp
    spec:
      containers:
        - name: redis
          image: redis:5.0
          ports:
            - name: web
              containerPort: 6379
          volumeMounts:
            - name: redis-data-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: redis-svc
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: web
  clusterIP: None
  selector:
    app: redisapp
